# TFM_MUIT

./: .gitignore  README.md  REST_API.yml
DOCKER/: docker-compose-without-neo4j-m1.quickstart_1.yml  docker-compose-without-neo4j-m1.quickstart_2.yml  docker-compose-without-neo4j-m1.quickstart_FEDE.yml
DOCKER/ingestion/: AEMET.yaml  DataEU.yaml  EU_FEDE.yaml
KUBERNETES/DATAHUB/: deploy.sh  deployEnv.sh  logs  ports_forward.sh
KUBERNETES/DATAHUB/helm/prerequisites/: values.yaml
KUBERNETES/DataAccess/DataHubActions/: Cargo.toml  Dockerfile  config.toml  runK8s.sh
KUBERNETES/DataAccess/DataHubActions/k8s/: configmap.yaml  deployment.yaml  secret.yaml
KUBERNETES/DataAccess/DataHubActions/src/: config.rs  error.rs  main.rs
KUBERNETES/DataAccess/DataHubActions/src/avro/: decoder.rs  mod.rs
KUBERNETES/DataAccess/DataHubActions/src/datahub/: events.rs  mod.rs
KUBERNETES/DataAccess/DataHubActions/src/health/: mod.rs  routes.rs
KUBERNETES/DataAccess/DataHubActions/src/kafka/: consumer.rs  handler.rs  mod.rs
KUBERNETES/DataAccess/DataHubActions/src/models/: common.rs
KUBERNETES/DataAccess/GraphQL/: addOwners.graphql  getAll.py  getDatasetById.graphql  getDatasetDetail.graphql  listAllPlatforms.graphql  listPlatforms.graphql  readOwners.graphql  removeOwners.graphql
KUBERNETES/DataAccess/GraphQL/HTTPClient/: Cargo.toml  Dockerfile
KUBERNETES/DataAccess/GraphQL/HTTPClient/src/: config.rs  error.rs  main.rs
KUBERNETES/DataAccess/GraphQL/HTTPClient/src/api/: catalogs.rs  common.rs  dataservices.rs  datasets.rs  mod.rs  owners.rs
KUBERNETES/DataAccess/GraphQL/HTTPClient/src/datahub/: catalog.rs  client.rs  common.rs  dataservice.rs  dataset.rs  distribution.rs  dto.rs  mapping.rs
KUBERNETES/DataAccess/GraphQL/HTTPClient/src/http/: catalogs.rs  common.rs  dataservices.rs  datasets.rs  distributions.rs  mod.rs
KUBERNETES/DataAccess/GraphQL/HTTPClient/src/models/: common.rs  dataservice.rs  distribution.rs
KUBERNETES/DataAccess/GraphQL/HTTPClient/src/repository/: common.rs  mod.rs
KUBERNETES/DataAccess/OpenAPI/: curl.sh  getApp.sh
KUBERNETES/DataSources/iceberg/: docker-compose.yaml
(+64 files in other folders)
