[package]
name = "datahub-kafka-consumer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "datahub-kafka-consumer"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Kafka — cmake-build compiles the bundled librdkafka 2.3.0 from source (no system library needed).
# Requires: cmake + a C compiler on the build machine.
#   Ubuntu/Debian: sudo apt-get install cmake build-essential libssl-dev pkg-config
#   Windows:       winget install Kitware.CMake  (plus MSVC build tools)
rdkafka = { version = "0.34", features = ["cmake-build", "tokio"] }

# Avro decoding
apache-avro = { version = "0.16", features = ["snappy"] }

# HTTP — for schema registry fetch and health probe
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Web framework — health endpoint
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config (mirrors HTTPClient pattern)
config = "0.14"

# Error handling
thiserror = "1"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# Byte utilities (reading Confluent 5-byte wire-format header)
bytes = "1"

# futures for stream extension trait
futures = "0.3"
